--- a/public/stylesheets/map-infoWindow.css
+++ b/public/stylesheets/map-infoWindow.css
@@ -1,11 +1,6 @@
-<<<<<<< HEAD
-body{
-
-}
 #outer-div{
-
     background-color: transparent;
-    width: 800px;
+    width: 100%;
     height: 100%
 
 }
@@ -25,38 +20,4 @@ body{
 #traffic-grap{
     width: 300px;
     height: 50px;
-}
-#btn-group{
-
-=======
-body{
-
-}
-#outer-div{
-
-    background-color: transparent;
-    width: 800px;
-    height: 100%
-
-}
-#content-div{
-    background-color: #1d7d74;
-
-}
-#content-div h2{
-    color: snow;
-}
-#junction-data{
-    background-color:#f0f0f0;
-}
-#junction-stats{
-    background-color: #f0f0f0;
-}
-#traffic-grap{
-    width: 300px;
-    height: 50px;
-}
-#btn-group{
-
->>>>>>> 67a00c80c60d9da0fe2b68cf924b17b431dd892d
 }
