Added Statistics Page and minor changes

--- a/public/assets/css/style.bundle.css
+++ b/public/assets/css/style.bundle.css
@@ -587,7 +587,7 @@ body.m--skin-dark {
   color: #ffffff !important; }
 
 .m--bg-brand {
-  background-color: #716aca !important; }
+  background-color: #8ac800 !important; }
 
 .m--bg-fill-brand {
   background-color: #716aca !important;
@@ -626,7 +626,7 @@ body.m--skin-dark {
   color: #ffffff !important; }
 
 .m--bg-accent {
-  background-color: #00c5dc !important; }
+  background-color: #00baff !important; }
 
 .m--bg-fill-accent {
   background-color: #00c5dc !important;
@@ -652,7 +652,7 @@ body.m--skin-dark {
   color: #ffffff !important; }
 
 .m--bg-primary {
-  background-color: #5867dd !important; }
+  background-color: #000000 !important; }
 
 .m--bg-fill-primary {
   background-color: #5867dd !important;
@@ -691,7 +691,7 @@ body.m--skin-dark {
   color: #111111 !important; }
 
 .m--bg-warning {
-  background-color: #ffb822 !important; }
+  background-color: #ff4b4b !important; }
 
 .m--bg-fill-warning {
   background-color: #ffb822 !important;
