--- a/src/app/simulator/simulator.component.html
+++ b/src/app/simulator/simulator.component.html
@@ -1,3 +1,3 @@
-<canvas id="backgroundCanvasAnchorPane" width="{{globals.CANVAS_LENGTH}}" height="{{globals.CANVAS_LENGTH}}">
+<canvas id="backgroundCanvasAnchorPane">
 Your browser doesn't support HTML canvas!
 </canvas>
