--- a/src/app/simulator/simulator.component.html
+++ b/src/app/simulator/simulator.component.html
@@ -1,3 +1,3 @@
-<canvas id="backgroundCanvasAnchorPane">
+<canvas id="backgroundCanvasAnchorPane" moz-opaque>
 Your browser doesn't support HTML canvas!
 </canvas>
