--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-sidebar></app-sidebar>
+<div id="app" class="container-fluid">
+  <div class="row">
+    <app-sidebar></app-sidebar>
+    <app-header></app-header>
+    <app-content></app-content>
+  </div>
+</div>
