--- a/src/app/components/skeleton/sidebar/sidebar.component.html
+++ b/src/app/components/skeleton/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
   <div class="side-nav-option">
     <a class="side-nav-option-title">
       <div>
-        <img src="../../../../assets/img/home_blue.svg">
+        <i class="zmdi zmdi-home"></i>
         <span>Junction Overview</span>
       </div>
     </a>
@@ -19,14 +19,37 @@
 
   <div id="accordion" role="tablist">
     <div class="card">
-      <a id="headingOne" class="card-header" data-toggle="collapse" href="#collapseJunction" role="button" aria-expanded="true" aria-controls="collapseOne">
-        <span>JUNCTION</span>
+      <a id="headingJunction" class="card-header collapsed" data-toggle="collapse" href="#collapseJunction" role="button" aria-expanded="false" aria-controls="collapseJunction">
+        <span>JUNCTION<i class="fa fa-chevron-down"></i></span>
         <p>Manage, Monitor and Control the junction related functions</p>
       </a>
 
       <div id="collapseJunction" class="collapse" role="tabpanel" aria-labelledby="collapseJunction" data-parent="#accordion">
         <div class="card-body">
-          xxx
+          <a class="card-body-item">
+            <div>
+              <i class="zmdi zmdi-remote-control zmdi-hc-fw"></i>
+              <span>Control Functions</span>
+            </div>
+          </a>
+          <a class="card-body-item">
+            <div>
+              <i class="zmdi zmdi-camera-party-mode zmdi-hc-fw"></i>
+              <span>Video Feed</span>
+            </div>
+          </a>
+          <a class="card-body-item">
+            <div>
+              <i class="zmdi zmdi-settings-square zmdi-hc-fw"></i>
+              <span>Junction Profile</span>
+            </div>
+          </a>
+          <a class="card-body-item">
+            <div>
+              <i class="zmdi zmdi-car zmdi-hc-fw"></i>
+              <span>Simulator</span>
+            </div>
+          </a>
         </div>
       </div>
     </div>
