--- a/src/app/components/skeleton/header/header.component.html
+++ b/src/app/components/skeleton/header/header.component.html
@@ -1,3 +1,15 @@
-<div class="header">
-
+<div class="main-header">
+  <div class="space-flex"></div>
+  <div>
+    <i class="zmdi zmdi-notifications zmdi-hc-fw"></i>
+    <a><img src="../../../../assets/img/oshan.jpg" alt="Avatar"></a>
+  </div>
+</div>
+<div class="sub-header">
+  <div id="contentTitle">Some Topic</div>
+  <div class="space-flex"></div>
+  <div id="contentHelp">
+    <i class="zmdi zmdi-help zmdi-hc-fw"></i>
+    <i class="zmdi zmdi-caret-down zmdi-hc-fw"></i>
+  </div>
 </div>
