--- a/src/app/components/skeleton/sidebar/sidebar.component.html
+++ b/src/app/components/skeleton/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
         <div class="card-body">
           <a class="card-body-item">
             <div>
-              <i class="zmdi zmdi-remote-control zmdi-hc-fw"></i>
+              <i class="zmdi zmdi-traffic zmdi-hc-fw"></i>
               <span>Control Functions</span>
             </div>
           </a>
