--- a/src/app/components/skeleton/header/header.component.scss
+++ b/src/app/components/skeleton/header/header.component.scss
@@ -1,10 +1,147 @@
-.header{
-  position: absolute;
+.main-header{
+  box-sizing: border-box;
+
+  display: flex;
+  flex-direction: row;
 
   width: 100%;
   height: 48px;
 
-  margin-left: 250px;
+  background-color: #1b9ce2;
+
+  display: flex;
+  align-items: center;
+
+  .space-flex{
+    display: block;
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+
+  div{
+    display: flex;
+    align-items: center;
+
+    i{
+      display: inline-block;
+
+      font-size: 24px;
+
+      margin-right: 15px;
+
+      color: #bbe1f6;
+    }
+
+    i:hover{
+      color: #ffffff;
+
+      cursor: pointer;
+    }
+
+    a{
+      img{
+        display: inline-block;
+
+        width: 32px;
+
+        margin-right: 25px;
+        border-radius: 50%;
+
+        opacity: 1;
+      }
+    }
+
+    a:hover{
+      cursor: pointer;
+
+      img{
+        opacity: 0.8;
+      }
+    }
+  }
+}
+
+.sub-header{
+  height: 55px;
 
   background-color: #1b9ce2;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  #contentTitle{
+    font-size: 24px;
+
+    margin-left: 20px;
+
+    font-family: Roboto;
+    color: #ffffff;
+  }
+
+  .space-flex{
+    display: block;
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+
+  #contentHelp{
+    font-size: 25px;
+
+    margin-right: 25px;
+
+    color: #bbe1f6;
+
+    i{
+      display: inline;
+
+      width: 100%;
+    }
+
+    .zmdi-help{
+      margin-right: -12px;
+    }
+
+    .zmdi-caret-down{
+      opacity: 0;
+    }
+  }
+
+  #contentHelp:hover{
+    color: #ffffff;
+
+    cursor: pointer;
+
+    .zmdi-help{
+      animation-name: help-show;
+      animation-duration: 300ms;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+
+    .zmdi-caret-down{
+      animation-name: caret-show;
+      animation-duration: 300ms;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes help-show {
+      from{
+        margin-right: -12px;
+      }
+      to{
+        margin-right: 0px;
+      }
+    }
+
+    @keyframes caret-show {
+      from{
+        opacity: 0;
+      }
+      to{
+        opacity: 1;
+      }
+    }
+  }
 }
