--- a/src/app/components/skeleton/sidebar/sidebar.component.css
+++ b/src/app/components/skeleton/sidebar/sidebar.component.css
@@ -1,12 +1,10 @@
 .side-nav {
   width: 250px;
   box-sizing: border-box;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  top: 0;
   display: flex;
   flex-direction: column;
+  flex: 1 1 100%;
+  height: 100%;
   background-color: #262f3d;
   font-family: Roboto;
   letter-spacing: 0.01rem;
