--- a/src/app/components/skeleton/sidebar/sidebar.component.scss
+++ b/src/app/components/skeleton/sidebar/sidebar.component.scss
@@ -4,13 +4,11 @@ $sidebar-width: 250px;
   width: $sidebar-width;
   box-sizing: border-box;
 
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  top: 0;
-
   display: flex;
   flex-direction: column;
+
+  flex: 1 1 100%;
+  height: 100%;
 
   background-color: #262f3d;
   font-family: Roboto;
