--- a/src/app/skeleton/sidebar/sidebar.component.html
+++ b/src/app/skeleton/sidebar/sidebar.component.html
@@ -1,19 +1,19 @@
 <div id="sidebar" class="side-nav">
-  <a id="brand">
+  <a id="brand" (click)="onClickBrand()">
     <img src="../../../../assets/img/stls_logo.svg">
     <h1>STLS</h1>
   </a>
 
   <div class="side-nav-option">
-    <a class="side-nav-option-title">
+    <a class="side-nav-option-title" (click)="onClickJunctionOverview()">
       <div>
         <i class="zmdi zmdi-home"></i>
         <span>Junction Overview</span>
       </div>
     </a>
-    <a class="side-nav-option-button">
-      <i class="fa fa-cog"></i>
-      <i class="fa fa-caret-right"></i>
+    <a class="side-nav-option-button" (click)="onClickJunctionOverviewSettings()">
+      <i class="zmdi zmdi-settings"></i>
+      <i class="zmdi zmdi-caret-right"></i>
     </a>
   </div>
 
@@ -21,30 +21,36 @@
     <div class="card">
       <a id="headingJunction" class="card-header collapsed" data-toggle="collapse" href="#collapseJunction" role="button" aria-expanded="false" aria-controls="collapseJunction">
         <span>JUNCTION<i class="fa fa-chevron-down"></i></span>
-        <p>Manage, Monitor and Control the junction related functions</p>
+        <p>Control Functions, Video Feed, Junction Profile, Simulator</p>
       </a>
 
-      <div id="collapseJunction" class="collapse" role="tabpanel" aria-labelledby="collapseJunction" data-parent="#accordion">
+      <div id="collapseJunction" class="collapse" role="tabpanel" aria-labelledby="collapseJunction">
         <div class="card-body">
           <a class="card-body-item" (click)="onClickControl()">
             <div>
               <i class="zmdi zmdi-traffic zmdi-hc-fw"></i>
-              <span>Control Functions</span>
+              <span>Control</span>
             </div>
           </a>
-          <a class="card-body-item">
+          <a class="card-body-item" (click)="onClickVideoFeed()">
             <div>
-              <i class="zmdi zmdi-camera-party-mode zmdi-hc-fw"></i>
+              <i class="zmdi zmdi-videocam zmdi-hc-fw"></i>
               <span>Video Feed</span>
             </div>
           </a>
-          <a class="card-body-item">
+          <a class="card-body-item" (click)="onClickJunctionProfile()">
             <div>
               <i class="zmdi zmdi-settings-square zmdi-hc-fw"></i>
               <span>Junction Profile</span>
             </div>
           </a>
-          <a class="card-body-item">
+          <a class="card-body-item" (click)="onClickHistory()">
+            <div>
+              <i class="zmdi zmdi-calendar zmdi-hc-fw"></i>
+              <span>History</span>
+            </div>
+          </a>
+          <a class="card-body-item" (click)="onClickSimulator()">
             <div>
               <i class="zmdi zmdi-car zmdi-hc-fw"></i>
               <span>Simulator</span>
@@ -54,17 +60,66 @@
       </div>
     </div>
 
-    <!--<div class="card">-->
-      <!--<div class="card-header" role="tab" id="headingTwo">-->
-          <!--<a class="collapsed" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">-->
-            <!--Collapsible Group Item #2-->
-          <!--</a>-->
-      <!--</div>-->
-      <!--<div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">-->
-        <!--<div class="card-body">-->
-          <!--yyy-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
+    <div class="card">
+      <a id="headingAnalytics" class="card-header collapsed" data-toggle="collapse" href="#collapseAnalytics" role="button" aria-expanded="false" aria-controls="collapseAnalytics">
+        <span>Analytics<i class="fa fa-chevron-down"></i></span>
+        <p>[....]</p>
+      </a>
+
+      <div id="collapseAnalytics" class="collapse" role="tabpanel" aria-labelledby="collapseAnalytics">
+        <div class="card-body">
+
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <a id="headingUser" class="card-header collapsed" data-toggle="collapse" href="#collapseUser" role="button" aria-expanded="false" aria-controls="collapseUser">
+        <span>USER<i class="fa fa-chevron-down"></i></span>
+        <p>New User, Manage Users</p>
+      </a>
+
+      <div id="collapseUser" class="collapse" role="tabpanel" aria-labelledby="collapseUser">
+        <div class="card-body">
+          <a class="card-body-item" (click)="onClickNewUser()">
+            <div>
+              <i class="zmdi zmdi-account-add zmdi-hc-fw"></i>
+              <span>New User</span>
+            </div>
+          </a>
+          <a class="card-body-item" (click)="onClickManageUsers()">
+            <div>
+              <i class="zmdi zmdi-accounts zmdi-hc-fw"></i>
+              <span>Manage Users</span>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <a id="headingAdministration" class="card-header collapsed" data-toggle="collapse" href="#collapseAdministration" role="button" aria-expanded="false" aria-controls="collapseAdministration">
+        <span>Administration<i class="fa fa-chevron-down"></i></span>
+        <p>Server Log, Login History</p>
+      </a>
+
+      <div id="collapseAdministration" class="collapse" role="tabpanel" aria-labelledby="collapseAdministration">
+        <div class="card-body">
+          <a class="card-body-item" (click)="onClickServerLog()">
+            <div>
+              <i class="zmdi zmdi-laptop zmdi-hc-fw"></i>
+              <span>Server Log</span>
+            </div>
+          </a>
+          <a class="card-body-item" (click)="onClickLoginHistory()">
+            <div>
+              <i class="zmdi zmdi-collection-bookmark zmdi-hc-fw"></i>
+              <span>Login History</span>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
