--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,4 @@
 @import "~bootstrap/dist/css/bootstrap.css";
-@import '../node_modules/font-awesome/css/font-awesome.css';
 @import '../node_modules/material-design-iconic-font/dist/css/material-design-iconic-font.css';
 @import "../node_modules/roboto-fontface/css/roboto/roboto-fontface.css";
 
@@ -7,4 +6,5 @@
 
 html, body {
   height: 100%;
+  overflow: hidden;
 }
