--- a/src/app/skeleton/sidebar/sidebar.component.html
+++ b/src/app/skeleton/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
   <div id="accordion" role="tablist">
     <div class="card">
       <a id="headingJunction" class="card-header collapsed" data-toggle="collapse" href="#collapseJunction" role="button" aria-expanded="false" aria-controls="collapseJunction">
-        <span>JUNCTION<i class="fa fa-chevron-down"></i></span>
+        <span>JUNCTION<i class="zmdi zmdi-chevron-down"></i></span>
         <p>Control Functions, Video Feed, Junction Profile, Simulator</p>
       </a>
 
@@ -62,7 +62,7 @@
 
     <div class="card">
       <a id="headingAnalytics" class="card-header collapsed" data-toggle="collapse" href="#collapseAnalytics" role="button" aria-expanded="false" aria-controls="collapseAnalytics">
-        <span>Analytics<i class="fa fa-chevron-down"></i></span>
+        <span>Analytics<i class="zmdi zmdi-chevron-down"></i></span>
         <p>[....]</p>
       </a>
 
@@ -75,7 +75,7 @@
 
     <div class="card">
       <a id="headingUser" class="card-header collapsed" data-toggle="collapse" href="#collapseUser" role="button" aria-expanded="false" aria-controls="collapseUser">
-        <span>USER<i class="fa fa-chevron-down"></i></span>
+        <span>USER<i class="zmdi zmdi-chevron-down"></i></span>
         <p>New User, Manage Users</p>
       </a>
 
@@ -99,7 +99,7 @@
 
     <div class="card">
       <a id="headingAdministration" class="card-header collapsed" data-toggle="collapse" href="#collapseAdministration" role="button" aria-expanded="false" aria-controls="collapseAdministration">
-        <span>Administration<i class="fa fa-chevron-down"></i></span>
+        <span>Administration<i class="zmdi zmdi-chevron-down"></i></span>
         <p>Server Log, Login History</p>
       </a>
 
