New User and Manage Users completed.

--- a/src/app/components/skeleton/header/header.component.html
+++ b/src/app/components/skeleton/header/header.component.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 <div class="sub-header">
-  <div id="contentTitle">Some Topic</div>
+  <div id="contentTitle">{{contentTitle}}</div>
   <div class="space-flex"></div>
   <div id="contentHelp">
     <i class="zmdi zmdi-help zmdi-hc-fw"></i>
