--- a/src/app/components/skeleton/content/content.component.html
+++ b/src/app/components/skeleton/content/content.component.html
@@ -1,2 +1,11 @@
 <ng-template #dynamicContent></ng-template>
-<app-new-user></app-new-user>
+<a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover" data-content="And here's some amazing content. It's very engaging. Right?">Dismissible popover</a>
+
+
+<button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+
+<script>
+  $('.popover-dismiss').popover({
+    trigger: 'focus'
+  })
+</script>
