--- a/src/app/content/administration/login-history/login-history.component.html
+++ b/src/app/content/administration/login-history/login-history.component.html
@@ -1,3 +1,49 @@
-<p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <h2>Login History</h2>
+            
+  <table class="table table-striped">
+    <thead>
+      <tr class="table-active">
+        <th>User</th>
+        <th>Email</th>
+        <th>Session id</th>
+        
+        <th>Last Login Time</th>
+        <th>Logout Time</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>john@example.com</td>
+        <td>5644</td>
+        <td>2017/12/31 21:31</td>
+        <td> 2017/12/31 21:38</td>
+        
+      </tr>
+    
+    </tbody>
+  </table>
+</div>
+
+</body>
+</html>
+
+
+
+<!-- <p>
   login-history works!
 </p>
+ -->
