--- a/src/app/components/junction/manage-junctions/manage-junctions.component.html
+++ b/src/app/components/junction/manage-junctions/manage-junctions.component.html
@@ -1,3 +1,24 @@
-<p>
-  manage-junctions works!
-</p>
+<div class="container">
+  <table class="table table-hover">
+    <thead class="thead-light">
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Street</th>
+      <th scope="col">City</th>
+      <th scope="col">Province</th>
+      <th scope="col">Latitude</th>
+      <th scope="col">Longitude</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let junction of junctions">
+      <td>{{junction.name}}</td>
+      <td>{{junction.street}}</td>
+      <td>{{junction.city}}</td>
+      <td>{{junction.province}}</td>
+      <td>{{junction.latitude}}</td>
+      <td>{{junction.longitude}}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
