--- a/src/app/components/skeleton/content/content.component.html
+++ b/src/app/components/skeleton/content/content.component.html
@@ -1,11 +1,2 @@
 <ng-template #dynamicContent></ng-template>
-<a tabindex="0" class="btn btn-lg btn-danger" role="button" data-toggle="popover" data-trigger="focus" title="Dismissible popover" data-content="And here's some amazing content. It's very engaging. Right?">Dismissible popover</a>
-
-
-<button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
-
-<script>
-  $('.popover-dismiss').popover({
-    trigger: 'focus'
-  })
-</script>
+<app-map></app-map>
