--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,5 +1,10 @@
+@import "partials/sidebar";
+
 //Avoid the elastic animation in Safari
 html, body {
   height: 100%;
   overflow: hidden;
+
+  font-family: Roboto;
 }
+
